--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^5.13.0",
+    "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "next": "12.2.0",
     "react": "18.2.0",
@@ -27,6 +29,8 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
     "typescript": "4.7.4"
